--- a/client/src/components/OptionsDropdown/OptionsDropdown.module.css
+++ b/client/src/components/OptionsDropdown/OptionsDropdown.module.css
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: column;
 
-
     position: absolute;
     right: 0;
 
@@ -15,7 +14,7 @@
     background-color: white;
     border: 1px solid black;
     border-radius: 20px;
-    z-index: 2;
+    z-index: 4;
     
 }
 
@@ -44,5 +43,5 @@
     left: 0;
     background-color: #000;
     opacity: 50%;
-    z-index: 4;
+    z-index: 3;
 }
