--- a/client/src/components/UserDropdown/UserDropdown.module.css
+++ b/client/src/components/UserDropdown/UserDropdown.module.css
@@ -23,7 +23,7 @@
   background-color: white;
   border: 1px solid black;
   border-radius: 20px;
-  z-index: 2;
+  z-index: 5;
   
 }
 
@@ -52,5 +52,5 @@
   left: 0;
   background-color: #000;
   opacity: 50%;
-  z-index: 1;
+  z-index: 4;
 }
